fix some css not working and update all theme

--- a/home4-br/propertyshelf/ps-base.html
+++ b/home4-br/propertyshelf/ps-base.html
@@ -68,7 +68,6 @@
                         <span class="lang lang-it"> Scegli il tuo paese</span>
                         <span class="lang lang-ja"> あなたの国を選択してください</span>
                         <span class="lang lang-ru"> Выберите вашу страну</span>
-                        <span class="lang lang-po"> Escolha o seu país</span>
                         <ul id="country-chooser-list">
                             <li><a href="http://costarica.imovel-mundial.com.br" class="country-costarica">Costa Rica</a></li>
                             <li><a href="http://ecuador.imovel-mundial.com.br" class="country-ecuador">Ecuador</a></li>
@@ -139,7 +138,6 @@
                 <div class="lang lang-de">Immobilien Angebote</div>
                 <div class="lang lang-fr">IMMOBILIERS PRÉSENTÉ</div>
                 <div class="lang lang-ru">ОБЪЕКТЫ НЕДВИЖИМОСТИ</div>
-                <div class="lang lang-po">ANÚNCIOS EM DESTAQUES</div>
             </div>
             <div id="feature-listing-above-footer"></div>
             <div id="footer-wrapper" class="footer container">
@@ -165,6 +163,9 @@
             <script defer src="js/plugins.js"></script>
            
             <script defer src="js/script.js"></script>
+            <script>
+                $( ".actionMenuContent #folder .subMenuTitle" ).text( "Folder" );
+            </script>
             <div id="site-scripts"></div>
 
             <!-- end scripts-->
