--- a/home4-fr/propertyshelf/ps-base.html
+++ b/home4-fr/propertyshelf/ps-base.html
@@ -134,10 +134,10 @@
             </div>
             <div id="feature-listing-slider">
                 <div class="lang lang-en">Featured Listings</div>
-                <div class="lang lang-es">Listados Especial</div>
+                <div class="lang lang-es">listado Especial</div>
                 <div class="lang lang-de">Immobilien Angebote</div>
-                <div class="lang lang-ru">Избранные листинги</div>
-                <div class="lang lang-fr">IMMOBILIERS PRÉSENTÈ</div>
+                <div class="lang lang-fr">IMMOBILIERS PRÉSENTÉ</div>
+                <div class="lang lang-ru">ОБЪЕКТЫ НЕДВИЖИМОСТИ</div>
             </div>
             <div id="feature-listing-above-footer"></div>
             <div id="footer-wrapper" class="footer container">
