--- a/home4-me.uk/propertyshelf/ps-base.html
+++ b/home4-me.uk/propertyshelf/ps-base.html
@@ -163,6 +163,9 @@
             <script defer src="js/plugins.js"></script>
            
             <script defer src="js/script.js"></script>
+            <script>
+                $( ".actionMenuContent #folder .subMenuTitle" ).text( "Folder" );
+            </script>
             <div id="site-scripts"></div>
 
             <!-- end scripts-->
