--- a/home4-br/propertyshelf/ps-base.html
+++ b/home4-br/propertyshelf/ps-base.html
@@ -68,6 +68,7 @@
                         <span class="lang lang-it"> Scegli il tuo paese</span>
                         <span class="lang lang-ja"> あなたの国を選択してください</span>
                         <span class="lang lang-ru"> Выберите вашу страну</span>
+                        <span class="lang lang-po"> Escolha o seu país</span>
                         <ul id="country-chooser-list">
                             <li><a href="http://costarica.imovel-mundial.com.br" class="country-costarica">Costa Rica</a></li>
                             <li><a href="http://ecuador.imovel-mundial.com.br" class="country-ecuador">Ecuador</a></li>
